# naherb-api/src/main/java/vn/io/naherb/order/dto/CheckoutRequest.java
@@ -6,7 +6,10 @@ import java.util.UUID;
 import vn.io.naherb.account.dto.UpsertAddressRequest;
 import vn.io.naherb.common.enums.PaymentMethod;
 
+import java.util.List;
+
 public record CheckoutRequest(
+        List<UUID> cartItemIds,
         UUID shippingAddressId,
         @Valid UpsertAddressRequest shippingAddress,
         Boolean saveAddress,
